--- a/src/style/components/ProfileView.scss
+++ b/src/style/components/ProfileView.scss
@@ -1,17 +1,20 @@
+@import '../mixins';
+
 .profileView {
   display: flex;
   margin: auto;
   width: 100%;
-  // height: 400px;
   padding: 10px;
 
+  @include small-screen {
+    flex-direction: column;
+  }
+
   &__img {
-    // flex: 1 1 0;
-    min-width: 400px;
+    max-width: 400px;
   }
 
   &__info {
-    // flex: 2 2 auto;
     margin-left: 24px;
     max-width: 600px;
   }
